--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -11,7 +11,7 @@
 
 
   <script src = ../goodtry.js></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/style.css">
 
 
   <nav class="navbar navbar-inverse">
