--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
   <script src = ../goodtry.js></script>
-<link rel="stylesheet" href="../Style/style.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/style.css">
 
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
