--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 <script src = ../goodtry.js></script>
-<link rel="stylesheet" href="../Style/style.css">
+<link rel="stylesheet" href="/style.css">
 
   <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="ZaeemQureshi.html">Zaeem Qureshi</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="ZaeemQureshi.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Education.html">Education</a></li>
       <li class="active"><a href="Projects.html">Projects</a></li>
       <li><a href="TechnicalSkills.html">Technical Skills</a></li>
