--- a/TechnicalSkills.html
+++ b/TechnicalSkills.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="ZaeemQureshi.html">Zaeem Qureshi</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="ZaeemQureshi.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Education.html">Education</a></li>
       <li><a href="Projects.html">Projects</a></li>
       <li class="active"><a href="TechnicalSkills.html">Technical Skills</a></li>
