--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 <script src = ../goodtry.js></script>
-<link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
+  
   <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
