--- a/Education.html
+++ b/Education.html
@@ -38,7 +38,7 @@
 
 
 <main>
-<div class="container dropdown">
+<div class="container-fluid dropdown">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#University">University of Ottawa</button>
     <div id="University" class="collapse">
     <p>  I have been attending the University of Ottawa since September 2013. Initially,
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-<div class="container dropdown">
+<div class="container-fluid dropdown">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Highschool">St Benedict Catholic Secondary</button>
     <div id="Highschool" class="collapse">
     <p>  St. Benedict was the highschool I attended in Cambridege Ontario.</P>
