--- a/Education.html
+++ b/Education.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href=">ZaeemQureshi.html">Zaeem Qureshi</a>
+        <a class="navbar-brand" href=">index.html">Zaeem Qureshi</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
