--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="Education.html">Education</a></li>
-      <li class="active"><a href="Projects.html">Projects</a></li>
+      <li class="active"><a href=#>Projects</a></li>
       <li><a href="TechnicalSkills.html">Technical Skills</a></li>
       <li><a href="WorkExperience.html">Work Experience</a></li>
       <li><a href="Extracurricular.html">Extracurricular</a></li>
