--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a class="navbar-brand" href="#">Zaeem Qureshi</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="ZaeemQureshi.html">Home</a></li>
+      <li class="active"><a href=#>Home</a></li>
       <li><a href="Education.html">Education</a></li>
       <li><a href="Projects.html">Projects</a></li>
       <li><a href="TechnicalSkills.html">Technical Skills</a></li>
