--- a/Education.html
+++ b/Education.html
@@ -2,21 +2,22 @@
 
 <head>
   <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
+
 
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href=">index.html">Zaeem Qureshi</a>
+        <a class="navbar-brand" href="index.html">Zaeem Qureshi</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="Education.html">Education</a></li>
+        <li class="active"><a href=#>Education</a></li>
         <li><a href="Projects.html">Projects</a></li>
         <li><a href="TechnicalSkills.html">Technical Skills</a></li>
         <li><a href="WorkExperience.html">Work Experience</a></li>
@@ -49,11 +50,9 @@
 <div class="container-fluid dropdown">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Highschool">St Benedict Catholic Secondary</button>
     <div id="Highschool" class="collapse">
-    <p>  St. Benedict was the highschool I attended in Cambridege Ontario.</P>
+    <p>  St. Benedict was the highschool I attended in Cambridge Ontario.</p>
     </div>
-</div>
-
-
+</div>    
 </main>
 
-</body></html>
+</body>
