--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -23,7 +23,7 @@
         <li><a href="Projects.html">Projects</a></li>
         <li><a href="TechnicalSkills.html">Technical Skills</a></li>
         <li><a href="WorkExperience.html">Work Experience</a></li>
-        <li class="active"><a href="Extracurricular.html">Extracurricular</a></li>
+        <li class="active"><a href=#>Extracurricular</a></li>
       </ul>
     </div>
   </nav>
