--- a/TechnicalSkills.html
+++ b/TechnicalSkills.html
@@ -18,7 +18,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="Education.html">Education</a></li>
       <li><a href="Projects.html">Projects</a></li>
-      <li class="active"><a href="TechnicalSkills.html">Technical Skills</a></li>
+      <li class="active"><a href=#>Technical Skills</a></li>
       <li><a href="WorkExperience.html">Work Experience</a></li>
       <li><a href="Extracurricular.html">Extracurricular</a></li>
     </ul>
