--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,7 +19,7 @@
       <li><a href="Education.html">Education</a></li>
       <li><a href="Projects.html">Projects</a></li>
       <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-      <li class="active"><a href="WorkExperience.html">Work Experience</a></li>
+      <li class="active"><a href=#>Work Experience</a></li>
       <li><a href="Extracurricular.html">Extracurricular</a></li>
     </ul>
   </div>
