--- a/Education.html
+++ b/Education.html
@@ -35,7 +35,7 @@
 
 
 <main>
-<div class="container-fluid dropdown">
+<div class="container-fluid dropdown row equal">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#University">University of Ottawa</button>
     <div id="University" class="collapse">
     <p>  I have been attending the University of Ottawa since September 2013. Initially,
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<div class="container-fluid dropdown">
+<div class="container-fluid dropdown row equal">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Highschool">St Benedict Catholic Secondary</button>
     <div id="Highschool" class="collapse">
     <p>  St. Benedict was the highschool I attended in Cambridge Ontario.</p>
