--- a/Education.html
+++ b/Education.html
@@ -7,7 +7,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  
+
+
+
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -35,7 +37,7 @@
 
 
 <main>
-<div class="container-fluid dropdown row equal">
+<div class="container-fluid dropdown">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#University">University of Ottawa</button>
     <div id="University" class="collapse">
     <p>  I have been attending the University of Ottawa since September 2013. Initially,
@@ -45,7 +47,7 @@
     </div>
 </div>
 
-<div class="container-fluid dropdown row equal">
+<div class="container-fluid dropdown">
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Highschool">St Benedict Catholic Secondary</button>
     <div id="Highschool" class="collapse">
     <p>  St. Benedict was the highschool I attended in Cambridge Ontario.</p>
