--- a/Education.html
+++ b/Education.html
@@ -37,22 +37,19 @@
 
 
 <main>
-<div class="container-fluid dropdown">
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#University">University of Ottawa</button>
-    <div id="University" class="collapse">
-    <p>  I have been attending the University of Ottawa since September 2013. Initially,
-        I had been enrolled in Electrical Engineering and Computing Technologies double major,
-        for which I had recieved a $2000/year scholarship from Nortel. After two years, however, I decided
-        that Electrical Engineering was not for me, and so switched to Computer Science, which I have been enrolled in since.</p>
-    </div>
-</div>
+    <div class="row equal">
+      <div class=  "col-lg-6 container-fluid card">
+        <h2>University of Ottawa</h2>
+        <h3><i>2013-</i></h3>
+        <p>I have been attending the University of Ottawa since September 2013. Initially, I had been enrolled in Electrical Engineering and Computing Technologies double major, for which I had recieved a $2000/year scholarship from Nortel. After two years, however, I decided that Electrical Engineering was not for me, and so switched to Computer Science, which I have been enrolled in since.</p>
+        </div>
 
-<div class="container-fluid dropdown">
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Highschool">St Benedict Catholic Secondary</button>
-    <div id="Highschool" class="collapse">
-    <p>  St. Benedict was the highschool I attended in Cambridge Ontario.</p>
-    </div>
-</div>    
+        <div class=  "container-fluid col-lg-6 card">
+          <h2>St. Benedict C.S.S</h2>
+          <h3><i>2009-2013</i></h3>
+         <p>  St. Benedict was the highschool I attended in Cambridge Ontario.</p>
+          </div>
+        </div>   
 </main>
 
 </body>
