--- a/Projects.html
+++ b/Projects.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
-
+<html class='parallax' lang="en">
 <head>
-<meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
-  
+  <title>Projects</title>
+  <link rel="stylesheet" href="css/style.css">
+
   <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">Zaeem Qureshi</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Education.html">Education</a></li>
-      <li class="active"><a href=#>Projects</a></li>
-      <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-      <li><a href="WorkExperience.html">Work Experience</a></li>
-      <li><a href="Extracurricular.html">Extracurricular</a></li>
-    </ul>
-  </div>
-</nav>
-
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Zaeem Qureshi</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="education.html">Education</a></li>
+          <li  class="active"><a href=#>Projects</a></li>
+          <li><a href="TechnicalSkills.html">Technical Skills</a></li>
+          <li><a href="WorkExperience.html">Work Experience</a></li>
+          <li><a href="Extracurricular.html">Extracurricular</a></li>
+        </ul>
+      </div>
+    </nav>
 </head>
 
-<body>
 
-<div class="jumbotron">
-<div class="container">
-<center><h1>Projects</h1></center>
-</div>
+<body class="parallax-body">
+  <div class="pimg1 parallax-img parallax-landing" style='background-image:url(img/projects-landing.jpg)'>
+    <div class="ptext">
+      <span class="border">
+        Projects
+      </span>
+    </div>
   </div>
 
-<main>
-<div class="col-lg-12 container-fluid card">
-<h3>Goal...</h3>
-<p>My goal this summer is to work on my programming and web developement skill as a whole. I am challenging myself to try and produce at least 3 valuable
-projects that I can be proud to say are mine. The primary goal for these projects will be to learn and expand my own horizons as a programmer and computer scientist, but also to further my career ambitions.
-Initially, this website is also primarily a project I am using as a way to at least teach myself how to make a competent, though basic, web site.</p>
-</div>
+  <div class="parallax-img parallax-section" style='background-image:url(img/sdm.jpeg)'>
+    <div class="ptext">
+      <span class="border trans">
+        Goal...
+      </span>
+    </div>
+  </div>
 
-</main>
-</body></html>
+  <section class="section section-light">
+    <p>
+        My goal this summer is to work on my programming and web developement skill as a whole. I am challenging myself to try and produce at least 3 valuable projects that I can be proud to say are mine. The primary goal for these projects will be to learn and expand my own horizons as a programmer and computer scientist, but also to further my career ambitions. Initially, this website is also primarily a project I am using as a way to at least teach myself how to make a competent, though basic, web site.
+    </p>
+  </section>
