--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -1,75 +1,100 @@
 <!DOCTYPE html>
-
+<html class='parallax Extracurricular' lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
+  <title>Extracurricular</title>
+  <link rel="stylesheet" href="css/style.css">
 
   <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Zaeem Qureshi</a>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Zaeem Qureshi</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href=education.html>Education</a></li>
+          <li><a href="Projects.html">Projects</a></li>
+          <li><a href="TechnicalSkills.html">Technical Skills</a></li>
+          <li><a href="WorkExperience.html">Work Experience</a></li>
+          <li class='active'><a href="Extracurricular.html">Extracurricular</a></li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Education.html">Education</a></li>
-        <li><a href="Projects.html">Projects</a></li>
-        <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-        <li><a href="WorkExperience.html">Work Experience</a></li>
-        <li class="active"><a href=#>Extracurricular</a></li>
-      </ul>
-    </div>
-  </nav>
-
+    </nav>
 </head>
 
-<body>
 
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Extracurricular</h1>
+<body class="parallax-body extracurricular" >
+
+  <div class="parallax-img parallax-landing" style='background-image: url(img/extracurricular-landing.jpeg)'>
+    <div class="ptext">
+      <span class="border">
+        Extracurricular
+      </span>
+    </div>
+  </div>
+
+  <div class="parallax-img parallax-section" style='background-image: url(img/ihtc.jpg)'>
+    <div class="ptext">
+      <span class="border trans">
+        Humanitarian Technology Conference
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-light">
+    <p>
+        I was invited to be a part of a team with a professor at the University of Ottawa to present during the IEEE International Humanitarian Conference in summer 2015.
+        We presented to a panel of various officials from tech companies, IEEE executives, and the Canadian Forces on a humanitarian project that took place a few years prior.
+        We also spoke about how IEEE can attract more youth to participate in such activities and projects. The presentation was well met and we were given an award.
+    </p>
+  </section>
+
+  <div class="parallax-img parallax-section" style='background-image: url(img/cmh.jpg)'>
+    <div class="ptext">
+      <span class="border trans">
+        Cambridge Memorial Hospital
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <p>
+        I volunteered on the weekends at the Cambridge Memorial Hospital. My duties involed working the patient and doctor databases. I was also required to direct visitors
+        to the appropriate location of whomever they were seeking.
+    </p>
+  </section>
+
+  <div class="parallax-img parallax-section"  style='background-image: url(img/scienceolympics.jpg)'>
+      <div class="ptext">
+        <span class="border trans">
+          Science Olympics
+        </span>
       </div>
     </div>
-
-<main>
-    <div class="row equal">
-      <div class=  "col-lg-6 container-fluid card">
-        <h2>Humanitarian Technology Conference</h2>
-        <h3><i>2015</i></h3>
-        <p>I was invited to be a part of a team with a professor at the University of Ottawa to present during the IEEE International Humanitarian Conference in summer 2015.
-          We presented to a panel of various officials from tech companies, IEEE executives, and the Canadian Forces on a humanitarian project that took place a few years prior.
-          We also spoke about how IEEE can attract more youth to participate in such activities and projects. The presentation was well met and we were given an award.</p>
+  
+    <section class="section section-light">
+      <p>
+          Places in second place in an event for which I was a last minute substitute. I also created, organized and coordinated a Rube Goldberg Machine team.
+          The team did well, and our machine had amongst the highest number of steps. Finally, was part of a strongest bridge building competetion. My teams bridge was the strongest by far.
+      </p>
+    </section>
+    <div class="parallax-img parallax-section"  style='background-image: url(img/deca.jpeg)'>
+        <div class="ptext">
+          <span class="border trans">
+           Distributive Education Club of America
+          </span>
         </div>
-
-        <div class=  "container-fluid col-lg-6 card">
-          <h2>Cambridge Memorial Hospital Volunteer</h2>
-          <h3><i>2011-2012</i></h3>
-          <p>I volunteered on the weekends at the Cambridge Memorial Hospital. My duties involed working the patient and doctor databases. I was also required to direct visitors
-            to the appropriate location of whomever they were seeking</p>
-          </div>
-        </div>
-
-        <div class="row equal">
-          <div class= "container-fluid col-lg-6 card">
-            <h2>Science Olympics</h2>
-            <h3><i>2010-2012</i></h3>
-            <p>Places in second place in an event for which I was a last minute substitute. I also created, organized and coordinated a Rube Goldberg Machine team.
-              The team did well, and our machine had amongst the highest number of steps. Finally, was part of a strongest bridge building competetion. My teams bridge was the strongest by far.</p>
-            </div>
-
-            <div class="col-lg-6 container-fluid card">
-              <h2>Distributive Education Club of America</h2>
-              <h3><i>2009-2011</i></h3>
-              <p>Participated in DECA business competitions for 2 years. Both times qualified for the provincial competition and competed against students across Ontario.</p>
-            </div>
-          </div>
-
-        </div>
-      </main>
-    </body>
-    </html>
+      </div>
+    
+      <section class="section section-dark">
+          <p>Participated in DECA business competitions for 2 years. Both times qualified for the provincial competition and competed against students across Ontario.</p>
+      </section>
+      
