--- a/index.html
+++ b/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-
-<link rel="stylesheet" type="text/css" href="https://rawgit.com/ZaeemQ/personalwebsite/master/style.css">
-  
-  <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Zaeem Qureshi</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href=#>Home</a></li>
-      <li><a href="Education.html">Education</a></li>
-      <li><a href="Projects.html">Projects</a></li>
-      <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-      <li><a href="WorkExperience.html">Work Experience</a></li>
-      <li><a href="Extracurricular.html">Extracurricular</a></li>
-    </ul>
-  </div>
-</nav>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Zaeem Qureshi</title>
 </head>
-
 <body>
+    <header id="landing">
+        <div id="mainbox">
+            <h1>Developer.</h1>
+            <p>A Computer Science student looking for his calling.</p>
+            
+            <div id="buttons">
+                    <a href="education.html" class="button">Education</a>
+                    <a href="projects.html" class="button">Projects</a>
+                    <a href="technicalskills.html" class="button">Technical Skills</a>
+                    <a href="workexperience.html" class="button">Work Experience</a>
+                    <a href="extracurricular.html" class="button">Extracurricular</a>
+            </div>
+            </div>
+    </header>
 
-<div class="jumbotron">
-
-<div class='container'>
-<center><h1>Welcome to the Zaeem Qureshi Online Portfolio</h1></center>
-</div>
-</div>
-
-<main>
-<h4> I am currently a Computer Science student at the University of Ottawa, in Ottawa Ontario</h4>
-
-
-  </main>
 </body>
+</html>
