--- a/Education.html
+++ b/Education.html
@@ -21,10 +21,10 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href=#>Education</a></li>
-          <li><a href="Projects.html">Projects</a></li>
-          <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-          <li><a href="WorkExperience.html">Work Experience</a></li>
-          <li><a href="Extracurricular.html">Extracurricular</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/TechnicalSkills.html">Technical Skills</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
     </nav>
