--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -20,10 +20,10 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href=education.html>Education</a></li>
-          <li><a href="Projects.html">Projects</a></li>
-          <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-          <li><a href="WorkExperience.html">Work Experience</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/TechnicalSkills.html">Technical Skills</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
           <li class='active'><a href="Extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
