--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -20,11 +20,11 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="education.html">Education</a></li>
-          <li><a href="Projects.html">Projects</a></li>
-          <li><a href="TechnicalSkills.html">Technical Skills</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/TechnicalSkills.html">Technical Skills</a></li>
           <li class="active"><a href="WorkExperience.html">Work Experience</a></li>
-          <li><a href="Extracurricular.html">Extracurricular</a></li>
+          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
     </nav>
