--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <p>A Computer Science student looking for his calling.</p>
             
             <div id="buttons">
-                    <a href="personalwebsite/master/education.html" class="button">Education</a>
-                    <a href="projects.html" class="button">Projects</a>
-                    <a href="technicalskills.html" class="button">Technical Skills</a>
-                    <a href="workexperience.html" class="button">Work Experience</a>
-                    <a href="extracurricular.html" class="button">Extracurricular</a>
+                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
+                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
+                <li  class='active'><a href=#>Technical Skills</a></li>
+                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
+                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
             </div>
             </div>
     </header>
