--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="buttons">
                 <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
                 <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
-                <li  class='active'><a href=#>Technical Skills</a></li>
+                <li><a href="TechnicalSkills.html">Technical Skills</a></li>
                 <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
                 <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
             </div>
