--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <p>A Computer Science student looking for his calling.</p>
             
             <div id="buttons">
-                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
-                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
-                <li><a href="TechnicalSkills.html">Technical Skills</a></li>
-                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
-                <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="technical_skills.html">Technical Skills</a></li>
+                <li><a href="work_experience.html">Work Experience</a></li>
+                <li><a href="extracurricular.html">Extracurricular</a></li>
             </div>
             </div>
     </header>
