--- a/work_experience.html
+++ b/work_experience.html
@@ -20,11 +20,11 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/education.html">Education</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/TechnicalSkills.html">Technical Skills</a></li>
-          <li class="active"><a href="WorkExperience.html">Work Experience</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
+          <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="technical_skills.html">Technical Skills</a></li>
+                <li class="active"><a href="work_experience.html">Work Experience</a></li>
+                <li><a href="extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
     </nav>
