--- a/education.html
+++ b/education.html
@@ -21,11 +21,10 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href=#>Education</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/Projects.html">Projects</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/TechnicalSkills.html">Technical Skills</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/WorkExperience.html">Work Experience</a></li>
-          <li><a href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/extracurricular.html">Extracurricular</a></li>
-        </ul>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="technical_skills.html">Technical Skills</a></li>
+          <li><a href="work_experience.html">Work Experience</a></li>
+          <li><a href="extracurricular.html">Extracurricular</a></li></ul>
       </div>
     </nav>
 </head>
