--- a/work_experience.html
+++ b/work_experience.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-  <title>Education</title>
+  <title>work_experience</title>
   <link rel="stylesheet" href="css/style.css">
 
   <nav class="navbar navbar-inverse">
@@ -23,7 +23,7 @@
           <li><a href="education.html">Education</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="technical_skills.html">Technical Skills</a></li>
-                <li class="active"><a href="work_experience.html">Work Experience</a></li>
+                <li class="active"><a href=#>Work Experience</a></li>
                 <li><a href="extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
