--- a/technical_skills.html
+++ b/technical_skills.html
@@ -21,10 +21,10 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li class="active"><a href="technical_skills.html">Technical Skills</a></li>
-                <li><a href="work_experience.html">Work Experience</a></li>
-                <li><a href="extracurricular.html">Extracurricular</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li class="active"><a href=#>Technical Skills</a></li>
+          <li><a href="work_experience.html">Work Experience</a></li>
+          <li><a href="extracurricular.html">Extracurricular</a></li>
         </ul>
       </div>
     </nav>
