--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Developer.</h1>
             <p>A Computer Science student looking for his calling.</p>
             
-            <div class="buttons">
+            <div id="buttons">
                 <li><a href="education.html">Education</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="technical_skills.html">Technical Skills</a></li>
