--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/ZaeemQ/personalwebsite/master/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Zaeem Qureshi</title>
 </head>
 <body>
     <header id="landing">
         <div id="mainbox">
             <h1>Developer.</h1>
-            <p>A Computer Science student looking for his calling.</p>
+            <p>A Computer Science student looking to start his career.</p>
             
             <div id="buttons">
                 <li><a href="education.html">Education</a></li>
