--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <p>A Computer Science student looking to start his career.</p>
             
             <div id="buttons">
-                <li><a href="education.html">Education</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="technical_skills.html">Technical Skills</a></li>
-                <li><a href="work_experience.html">Work Experience</a></li>
-                <li><a href="extracurricular.html">Extracurricular</a></li>
+                <li><a href="education.html" class="button">Education</a></li>
+                <li><a href="projects.html" class="button">Projects</a></li>
+                <li><a href="technical_skills.html" class="button">Technical Skills</a></li>
+                <li><a href="work_experience.html" class="button">Work Experience</a></li>
+                <li><a href="extracurricular.html" class="button">Extracurricular</a></li>
             </div>
             </div>
     </header>
