--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Zaeem Qureshi</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
     <header id="landing">
         <div id="mainbox">
             <h1>Developer.</h1>
-            <p>A Computer Science student looking to start his career.</p>
+            <p>A Computer Science student looking for his calling.</p>
             
             <div id="buttons">
-                <li><a href="education.html" class="button">Education</a></li>
-                <li><a href="projects.html" class="button">Projects</a></li>
-                <li><a href="technical_skills.html" class="button">Technical Skills</a></li>
-                <li><a href="work_experience.html" class="button">Work Experience</a></li>
-                <li><a href="extracurricular.html" class="button">Extracurricular</a></li>
+                    <a href="education.html" class="button">Education</a>
+                    <a href="projects.html" class="button">Projects</a>
+                    <a href="technicalskills.html" class="button">Technical Skills</a>
+                    <a href="workexperience.html" class="button">Work Experience</a>
+                    <a href="extracurricular.html" class="button">Extracurricular</a>
             </div>
             </div>
     </header>
