--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
-          <li class="active"><a href="projects.html">Projects</a></li>
-          <li><a href=#>Technical Skills</a></li>
+          <li class="active"><a href=#>Projects</a></li>
+          <li><a href="technical_skills.html">Technical Skills</a></li>
           <li><a href="work_experience.html">Work Experience</a></li>
           <li><a href="extracurricular.html">Extracurricular</a></li>
         </ul>
