--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="buttons">
                     <a href="education.html" class="button">Education</a>
                     <a href="projects.html" class="button">Projects</a>
-                    <a href="technicalskills.html" class="button">Technical Skills</a>
-                    <a href="workexperience.html" class="button">Work Experience</a>
+                    <a href="technical_skills.html" class="button">Technical Skills</a>
+                    <a href="work_experience.html" class="button">Work Experience</a>
                     <a href="extracurricular.html" class="button">Extracurricular</a>
             </div>
             </div>
