--- a/TechnicalSkills.html
+++ b/TechnicalSkills.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href=education.html>Education</a></li>
+          <li><a href="Education.html">Education</a></li>
           <li><a href="Projects.html">Projects</a></li>
           <li  class='active'><a href=#>Technical Skills</a></li>
           <li><a href="WorkExperience.html">Work Experience</a></li>
