--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="education.html">Education</a></li>
+          <li><a href="Education.html">Education</a></li>
           <li><a href="Projects.html">Projects</a></li>
           <li><a href="TechnicalSkills.html">Technical Skills</a></li>
           <li class="active"><a href="WorkExperience.html">Work Experience</a></li>
