--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <p>A Computer Science student looking for his calling.</p>
             
             <div id="buttons">
-                    <a href="education.html" class="button">Education</a>
-                    <a href="projects.html" class="button">Projects</a>
-                    <a href="technicalskills.html" class="button">Technical Skills</a>
-                    <a href="workexperience.html" class="button">Work Experience</a>
-                    <a href="extracurricular.html" class="button">Extracurricular</a>
+                    <a href="Education.html" class="button">Education</a>
+                    <a href="Projects.html" class="button">Projects</a>
+                    <a href="TechnicalSkills.html" class="button">Technical Skills</a>
+                    <a href="WorkExperience.html" class="button">Work Experience</a>
+                    <a href="Extracurricular.html" class="button">Extracurricular</a>
             </div>
             </div>
     </header>
